objects/vlocity_ins__OrchestrationPlanDefinition__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <description>Additional notes describing the record on the object OrchestrationPlanDefinition.</description>
        <label>Description</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <description>The globally unique identifier of the Product. Used to identify the product across Salesforce instances.</description>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsSchedulingEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable and disable jeopardy parameters recalculation for orchestration items related to a plan definition</description>
        <label>Is Scheduling Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SchedulingExpirationIntervalSeconds__c</fullName>
        <defaultValue>31557600</defaultValue>
        <description>Defines a duration in seconds to monitor overdue tasks starting from a task creation date.
Once scheduling interval is reached then system stops calculating jeopardy statuses for tasks and order due dates (i.e. scheduling is expired).
This setting allows to switch off Orchestration Plan re-scheduling after some period of time. Orders and Order Items with expired scheduling are not updated.</description>
        <label>Scheduling Expiration Interval (Seconds)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Scope__c</fullName>
        <label>Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Global</fullName>
                    <default>true</default>
                    <label>Global</label>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Order Item</fullName>
                </value>
                <value>
                    <fullName>Main Order Item</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__ShowOrder__c</fullName>
        <label>Show Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Orchestration Plan Definition</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Orchestration Plan Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orchestration Plan Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>vlocity_ins__ValidateShowOrder</fullName>
        <active>true</active>
        <description>Allow non-negative values in Show Order field</description>
        <errorConditionFormula>vlocity_ins__ShowOrder__c &lt; 0</errorConditionFormula>
        <errorMessage>Show Order cannot have negative values.</errorMessage>
    </validationRules>
</CustomObject>